--- a/FrontEnd/projects/sfm/src/app/User/Components/complain-status/complain-status.component.html
+++ b/FrontEnd/projects/sfm/src/app/User/Components/complain-status/complain-status.component.html
@@ -1,1 +1,24 @@
-<p>complain-status works!</p>
+<h3 class="text-secondary">Status of your complaint</h3>
+<br/>
+<div class="card">
+<div class="card-body">
+<table class="table table-bordless" >
+  
+<thead style="text-align: center;">
+        <th>Subject</th>
+        <th>Complaint Message</th>
+        <th>Duration of Days</th>
+        <th>Others</th>
+        
+        </thead>
+    <tbody style="text-align: center;">
+      <tr >
+        <td>{{sub}}</td>
+        <td>{{msg}}</td>
+        <td>{{days}}</td>
+        <td>{{others}}</td>
+        </tr>
+     </tbody>
+      </table>  
+    </div>
+  </div>    
