--- a/FrontEnd/projects/sfm/src/app/User/Components/view-event/view-event.component.html
+++ b/FrontEnd/projects/sfm/src/app/User/Components/view-event/view-event.component.html
@@ -1,1 +1,164 @@
-<p>view-event works!</p>
+
+<div class="card" style="width: 100%;">
+    <div class="card-body" style="align-items: right;color:blueviolet">
+       <h2><b>EVENTS 2021</b></h2> 
+    </div>
+</div>       
+
+<div class="container-fluid mt-5 p-4">
+    <div class="row mt-2 g-1">
+        <div class="col-md-3">
+            <div class="card p-2 " >
+                <div class="text-right"> <small>Jan 03 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>DESIGN YOU OWN POTLUCK COOKBOOK</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Jan 24 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>THE ULTIMATE COMMUNITY TAG SALE</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Feb 14 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>SPREAD THE LOVE ON VALENTINE'S DAY</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room B1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Mar 07 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>BONFIRE S'MORES UNDER THE STARS</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A2</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Mar 28 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>HEALTH-PROMOTING FITNESS CLASSES</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A2</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>April 18 2021</small> </div>
+                <div class="text-center mt-2 p-3">
+                    <hr> <span>GET CREATIVE WITH GROUP PAINTING</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>May 09 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>KIDS POOL PARTY WITH CHARACTERS</span></div>div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">WAVERS POOL Block D</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>May 30 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>NOW YOUR'RE COOKING,WITH CLASSES!</span></div>div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room B1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Jun 20 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>GET YOUR FAMILIES DANCING</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Jul 11 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>MOVIE SCREENINGS ON THE LAWN</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Backyard Lawn</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Aug 01 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>ONE BOOK CLUB TO RULE ALL</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Society Mini Library</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Aug 22 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>FUN RUN, LITERALLY</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Front Porch Parking Lot A</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Sep 12 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>BOUNCE HOUSE & INFLATABLES DAY</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Backyard Lawn</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Oct 03 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>UNLEASH YOUR KARAOKE STARS</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Front Park1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Oct 24 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>SPOOKY COSTUME COMPETITION</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Backyard Lawn</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Nov 14 2021</small> </div>
+                <div class="text-center mt-2 p-3"> 
+                    <hr> <span>ROCK YOUR COMMUNITY</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center color-#ff6666"> <i class="fa fa-map-marker"></i> <small class="ml-1">Conference room A1</small> </div>
+                    <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card p-2">
+                <div class="text-right"> <small>Dec 26 2021</small> </div>
+                <div class="text-center mt-2 p-3 "> 
+                    <hr> <span>TURN UP THE JAMS ON DJ NIGHT</span></div><br>
+                    <div class="d-flex flex-row align-items-center justify-content-center"> <i class="fa fa-map-marker"></i> <small class="ml-1">Outside Area Society</small> </div>
+                   <br> <div class="text-right "> <span><b class="intro">INR 500</b></span> </div>
+            </div>
+        </div>
+    </div>
+</div>
